--- a/app/globals.css
+++ b/app/globals.css
@@ -1,5 +1,14 @@
 @import "tailwindcss";
 
+
+html {
+  scroll-behavior: smooth;
+}
+
+body {
+  margin: 0;
+  padding: 0;
+}
 /* :root {
   --background: #ffffff;
   --foreground: #171717;
